<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crew"
    android:padding="16dp"

    tools:context=".screens.MenuFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_style3"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnAnalytics"
        app:layout_constraintStart_toStartOf="@+id/btnAnalytics"
        app:layout_constraintTop_toBottomOf="@+id/btnAnalytics" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAnalytics"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_style3"
        android:text="@string/analytics"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnTraining"
        app:layout_constraintStart_toStartOf="@+id/btnTraining"
        app:layout_constraintTop_toBottomOf="@+id/btnTraining" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTraining"
        android:layout_width="356dp"
        android:layout_height="81dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_style3"
        android:text="@string/training"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/goal_for_the_day"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:gravity="center"
        android:text="25000"
        android:textColor="@color/color_header"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/points"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:max="25000"
        android:progress="10000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:progressDrawable="@drawable/progress"
/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/progress"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textProgressPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="25000"
        android:textColor="@color/color_header"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="P"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/textProgressPoints"
        app:layout_constraintStart_toEndOf="@+id/textProgressPoints" />


</androidx.constraintlayout.widget.ConstraintLayout>